Add golang API generation
 On branch initial-implementation
 Changes to be committed:
	modified:   Makefile
	modified:   buf.gen.yaml
	modified:   tsumugi-server/src/main/protobuf/analyzers.proto
	modified:   tsumugi-server/src/main/protobuf/strategies.proto
	modified:   tsumugi-server/src/main/protobuf/suite.proto
	new file:   tsumugi_golang/tsumugi/proto/analyzers.pb.go
	new file:   tsumugi_golang/tsumugi/proto/strategies.pb.go
	new file:   tsumugi_golang/tsumugi/proto/suite.pb.go
	modified:   tsumugi_python/proto/analyzers_pb2.py
	modified:   tsumugi_python/proto/strategies_pb2.py
	modified:   tsumugi_python/proto/suite_pb2.py

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -3,9 +3,13 @@ managed:
   enabled: true
 
 plugins:
+  # Python API
   - remote: buf.build/grpc/python:v1.64.2
     out: tsumugi_python/proto/
   - remote: buf.build/protocolbuffers/python:v27.1
     out: tsumugi_python/proto/
   - remote: buf.build/protocolbuffers/pyi
     out: tsumugi_python/proto/
+  # Go API
+  - remote: buf.build/protocolbuffers/go:v1.34.2
+    out: tsumugi_golang/
