Create a python package and humanize Makefile
- add a poetry project
- update makefile by adding commands for download and prepare the Spark Connect Server

 On branch initial-implementation
 Changes to be committed:
	modified:   .gitignore
	modified:   Makefile
	modified:   README.md
	modified:   buf.gen.yaml
	new file:   dev/run-connect.sh
	modified:   tsumugi-server/pom.xml
	new file:   tsumugi_python/poetry.lock
	deleted:    tsumugi_python/proto/analyzers_pb2.py
	deleted:    tsumugi_python/proto/strategies_pb2.py
	deleted:    tsumugi_python/proto/suite_pb2.py
	new file:   tsumugi_python/pyproject.toml
	renamed:    tsumugi_python/__init__.py -> tsumugi_python/tsumugi/__init__.py
	renamed:    tsumugi_python/examples/base_example.py -> tsumugi_python/tsumugi/examples/base_example.py
	new file:   tsumugi_python/tsumugi/proto/analyzers_pb2.py
	renamed:    tsumugi_python/proto/analyzers_pb2.pyi -> tsumugi_python/tsumugi/proto/analyzers_pb2.pyi
	renamed:    tsumugi_python/proto/analyzers_pb2_grpc.py -> tsumugi_python/tsumugi/proto/analyzers_pb2_grpc.py
	new file:   tsumugi_python/tsumugi/proto/strategies_pb2.py
	renamed:    tsumugi_python/proto/strategies_pb2.pyi -> tsumugi_python/tsumugi/proto/strategies_pb2.pyi
	renamed:    tsumugi_python/proto/strategies_pb2_grpc.py -> tsumugi_python/tsumugi/proto/strategies_pb2_grpc.py
	new file:   tsumugi_python/tsumugi/proto/suite_pb2.py
	renamed:    tsumugi_python/proto/suite_pb2.pyi -> tsumugi_python/tsumugi/proto/suite_pb2.pyi
	renamed:    tsumugi_python/proto/suite_pb2_grpc.py -> tsumugi_python/tsumugi/proto/suite_pb2_grpc.py

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -5,11 +5,11 @@ managed:
 plugins:
   # Python API
   - remote: buf.build/grpc/python:v1.64.2
-    out: tsumugi_python/proto/
+    out: tsumugi_python/tsumugi/proto/
   - remote: buf.build/protocolbuffers/python:v27.1
-    out: tsumugi_python/proto/
+    out: tsumugi_python/tsumugi/proto/
   - remote: buf.build/protocolbuffers/pyi
-    out: tsumugi_python/proto/
+    out: tsumugi_python/tsumugi/proto/
   # Go API
   - remote: buf.build/protocolbuffers/go:v1.34.2
     out: tsumugi_golang/
