--- a/tsumugi-server/pom.xml
+++ b/tsumugi-server/pom.xml
@@ -25,6 +25,8 @@
         <io.grpc.version>1.56.0</io.grpc.version> <!-- This version is taken from Apache Spark -->
         <!-- TODO: This one should be replaced after the release of Apache Spark 4.0 -->
         <spark.version>3.5.1</spark.version>
+        <scalatest.version>3.2.19</scalatest.version>
+        <junit.version>1.10.2</junit.version>
     </properties>
 
     <repositories>
@@ -70,7 +72,26 @@
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.compat.version}</artifactId>
-            <version>3.2.19</version>
+            <version>${scalatest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatestplus</groupId>
+            <artifactId>junit-5-10_${scala.compat.version}</artifactId>
+            <version>${scalatest.version}.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- junit 5 porn -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -171,7 +192,7 @@
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.2.0</version>
                 <configuration>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
