--- a/tsumugi-python/pyproject.toml
+++ b/tsumugi-python/pyproject.toml
@@ -9,9 +9,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pyspark = {extras = ["connect"], version = "3.5.2"}
+protobuf = "<5.28"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
+jupyterlab = "*"
 
 [build-system]
 requires = ["poetry-core"]
