--- a/tsumugi-python/pyproject.toml
+++ b/tsumugi-python/pyproject.toml
@@ -14,6 +14,13 @@ protobuf = "<5.28"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
 jupyterlab = "*"
+mkdocs = "^1"
+mkdocs-material-extensions = "*"
+mkdocs-material = "*"
+mkdocs-literate-nav = "*"
+mkdocs-section-index = "*"
+mkdocs-macros-plugin = "*"
+markdown-include = "*"
 
 [build-system]
 requires = ["poetry-core"]
