--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Build and Deploy
         run: |
           cd tsumugi-python
-          poetry run mkdocs gh-deploy --force -C ..
+          poetry run -C ${{ github.workspace }} mkdocs gh-deploy --force
