--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: release-assets
 
 on:
   push:
+    branches:
+      - main
     tags:
-      - "v*.*.*"
+      - "*.*.*"
 
 jobs:
   release:
