--- a/tsumugi-server/pom.xml
+++ b/tsumugi-server/pom.xml
@@ -139,7 +139,6 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
@@ -244,6 +243,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <!-- Shade magic, copied from Apache Spark -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -254,6 +254,7 @@
                     <artifactSet>
                         <includes>
                             <include>com.google.protobuf:*</include>
+                            <include>com.amazon.deequ:*</include>
                         </includes>
                     </artifactSet>
                     <relocations>
