--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5 
+      - name: install python
+        uses: actions/setup-python@v5 
+        with:
+          python-version: '3.11'
+
       - uses: snok/install-poetry@v1
 
       - name: install project
