--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Set up Python
         if: startsWith(github.ref, 'refs/tags/')
         uses: actions/setup-python@v5
+        python-version: '3.11'
 
       - name: Set up Poetry
         if: startsWith(github.ref, 'refs/tags/')
@@ -47,6 +48,7 @@ jobs:
         run: |
           poetry version ${{ steps.generate_tag.output.id }}
           poetry build --format sdist
+        working_directory: tsumugi-python
 
       - name: Upload assets
         if: startsWith(github.ref, 'refs/tags/')
