--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           poetry version ${{ steps.generate_tag.output.id }}
           poetry build --format sdist
-        working_directory: tsumugi-python
+        working-directory: tsumugi-python
 
       - name: Upload assets
         if: startsWith(github.ref, 'refs/tags/')
